[package]
name = "lachesis"
authors = ["Ibrahim Hisham <ibrahim.hisham@proton.me>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = ["cargo", "derive"] }
tabled = "0.15.0"
tasklist = "0.2.12"

[dependencies.windows]
version = "0.44.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
