[workspace]
resolver = "2"
members = [
    "laches",
    "laches_mon",
    "laches_tui",
]

[workspace.dependencies]
auto-launch = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1.6", features = ["cargo", "derive"] }
crossterm = "0.28"
ratatui = "0.29"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }