[package]
name = "laches_mon"
version = "0.1.0"
edition = "2021"
authors = ["Ibrahim Hisham <ibrahim.hisham@proton.me>"]
license = "MIT"

[dependencies]
laches = { path = "../laches" }

rusqlite.workspace = true
ctrlc = { version = "3.4", features = ["termination"] }

[dev-dependencies]
tempfile = "3.8"
